2016-07-28 Nemea-detectors-1.3.0
	* vportscan_detector:
		bugfix bad timestamp field used
		optimization
		replace python wrapper with pytrap in aggregator
	* UrlBlacklistFilter:
		update to new framework version
	* miner_detector:
		added new detector of BitCoin miners
	* hoststats:
		updated detection of scans and dos
	* haddrscan_detector:
		added new detector of horizontal scans
	* all detectors:
		adapted to changed API of B+ tree in nemea-common
	* bruteforcedetector:
		published from internal repository
	* amplification_detector:
		code maintenance

2016-06-03 Nemea-detectors-1.2.4
	* tunnel_detection & DNSblacklistfilter:
		fixed data type of DNS_RDATA (bytes->string)
	* sip_bf_detecotr:
		updated default values
		added Doxyfile

2016-04-24 Nemea-detectors-1.2.3
        * voip_fraud_detecion:
		added IFC for SDM statistics
		changed default path to the file with last event id
		disabled debugging info output
	* sip_bf_detector:
		added protocol and link bit field to outgoing alerts
		illogical fields in report now set to null
		breach flag now contain true/flase rather than 0/1 value
	* tunnel_detection:
		path to the file with last event id can be set with parameter E
		default path to the file is set to /data/dnstunnel_detection/event_id.txt

2016-04-03 Nemea-detectors-1.2.2
        * vportscan_detector:
		added README
		few bugfixes

2016-03-16 Nemea-detectors-1.2
        * added module: SIP Brute-Force Detector


2016-02-28 Nemea-detectors-1.1
	* bugfix voip_fraud_detection
	* doc improvement
	* renamed tunnel_detection to dnstunnel_detection

2016-02-16 Nemea-detectros-1.0

	* Contained components:
		amplification_detection
		blacklistfilter
		hoststatsnemea
		tunnel_detection
		voip_fraud_detection
		vportscan_detector