@@ -1,3 +1,8 @@
+2016-08-05 Nemea-detectors-1.3.1
+	* sip_bf_detector:
+		compatibility with c++11
+	* miner_detector:
+		bugfixes
 2016-07-28 Nemea-detectors-1.3.0
 	* vportscan_detector:
 		bugfix bad timestamp field used
